--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
   <!-- <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">  -->
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="The smartest jobsite in the middle east" />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
